# finchat

./: .gitignore  Dockerfile  Makefile  README.md  agents.py  api.py  ask.py  attempt1.py  attempt2.py  attempt3.py  attempt4.py  attempt5.py  attempt6.py  attempt7.py  attempt8.py  attempt9.py  chains.py  env.sample  llm.py  llms.py  local.py  main.py  models.py  prompts.py  pyproject.toml  read.py  report.py  run_with_local_model.py  services.py  tests.py  utils.py  web.py
reports/: report-20240311001724-gpt-4-simple.csv  report-20240311001724-gpt-4-simple.html  report-20240311001944-amazon.titan-text-express-v1-simple.csv  report-20240311001944-amazon.titan-text-express-v1-simple.html  report-20240311002426-amazon.titan-text-express-v1-agent_keeping_history.csv  report-20240311002426-amazon.titan-text-express-v1-agent_keeping_history.html  report-20240311002933-amazon.titan-text-express-v1-agent_developer.csv  report-20240311002933-amazon.titan-text-express-v1-agent_developer.html  report-20240311004537-gpt-4-agent_developer.csv  report-20240311004537-gpt-4-agent_developer.html  report-20240311005748-gpt-4-agent_keeping_history.csv  report-20240311005748-gpt-4-agent_keeping_history.html
src/: agents.py  api.py  chains.py  local.py  main.py  read.py  run_with_local_model.py  tests.py  utils.py
templates/: document.html  index.html
